--- a/style.css
+++ b/style.css
@@ -1,4 +1,34 @@
+@import url("/styles/utility.css");
 @import url("https://fonts.googleapis.com/css2?family=Montserrat&family=Nunito&family=Poppins:wght@500&display=swap");
+input,
+button,
+select {
+ appearance: none;
+ -webkit-appearance: none;
+ -moz-appearance: none;
+ border: none;
+ outline: none;
+ background: none;
+ margin: 0;
+ cursor: pointer;
+ /* Add any additional styles as needed */
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+ul,
+ol,
+li {
+ margin: 0;
+ padding: 0;
+ font-weight: normal;
+}
+
 html,
 body {
  --primary: #a991f7;
@@ -28,17 +58,53 @@ h4 {
  align-items: center;
 }
 #filter-controls {
+ color: rgb(186, 186, 186);
  display: flex;
  width: 60%;
  height: 3rem;
  border-radius: 0.3rem;
  box-shadow: 0px 10px 15px -3px rgba(0, 0, 0, 0.1),
   0px 10px 15px -3px rgba(0, 0, 0, 0.1), 0px 10px 15px -3px rgba(0, 0, 0, 0.1);
+ margin: 1rem 0 1rem 0;
+ padding: 0.3rem;
 }
 #filter-controls input {
- width: 60%;
- background: none;
- border: 1px;
+ font-family: inherit;
+ font: bold;
+ padding: 0.5rem;
+ background-color: white;
+ width: 20rem;
+ border-radius: 0.3rem 0 0 0.3rem;
+}
+
+#filter-controls select,
+button {
+ display: flex;
+ align-items: center;
+ justify-content: center;
+ font-family: inherit;
+ font: bold;
+ padding: 0.5rem;
+ background-color: white;
+ border-radius: 0.3rem;
+}
+#filter-controls select,
+button > * {
+ margin-left: 0.3rem;
+}
+#filter-controls .join {
+ display: flex;
+ width: fit-content;
+}
+
+#filter-controls .join button {
+ border-left: rgb(86, 86, 86) 1px solid;
+ padding: 0.3rem 1rem 0.3rem 1rem;
+ font-size: 12px;
+ border-radius: 0;
+}
+#filter-controls > * {
+ margin-right: 0.3rem;
 }
 #dialog {
  overflow: auto;
@@ -55,7 +121,7 @@ h4 {
  width: 40rem;
 }
 #dialog .rank {
- font-size: 18px;
+ font-size: 25px;
  margin-bottom: 1rem;
 }
 #dialog .artist {
@@ -75,8 +141,8 @@ h4 {
  cursor: pointer;
  margin-left: auto;
  padding: 1rem;
- background: white;
  border: none;
+ background-color: inherit;
 }
 .flexbox {
  display: flex;
@@ -90,14 +156,79 @@ h4 {
  justify-content: center;
  align-items: center;
  width: 50%;
+ padding: 1rem;
 }
 .album-info .modal-content-2 {
  font-size: 15px;
- padding-left: 1rem;
  width: 50%;
+ display: flex;
+ flex-direction: column;
 }
 .modal-content-2 .critic-rating {
+ font-size: 5rem;
+ display: flex;
+ width: fit-content;
+ flex-direction: column;
+ text-align: center;
+ margin: auto;
+}
+.critic-rating {
+ display: flex;
+ gap: 1;
+ align-items: center;
+ justify-content: center;
+}
+.critic-rating .label {
+ /* font-size: 0.8rem; */
  font-size: 2rem;
+}
+.critic-rating .score {
+ border: 1px solid black;
+ display: flex;
+ align-items: center;
+ justify-content: center;
+ border-radius: 100%;
+ font-size: 2rem;
+ width: 2rem;
+ height: 2rem;
+ padding: 2rem;
+}
+.genre-title {
+ margin-right: 0.5rem;
+ align-self: center;
+ font-size: 20px;
+}
+.genre-list {
+ height: 100%;
+ display: flex;
+ flex-wrap: wrap;
+ margin: 0;
+ list-style-type: none;
+ align-items: center;
+}
+.genre-list li {
+ font: bold;
+ padding: 0;
+ margin-right: 0.5rem;
+}
+.date {
+ display: flex;
+ align-items: center;
+ font-size: 20px;
+ width: 100%;
+}
+.date > span {
+ font-size: 15px;
+ margin-left: 0.5rem;
+}
+.artist {
+ display: flex;
+ align-items: center;
+ font-size: 15px;
+}
+.artist > span {
+ font-size: 20px;
+ margin-right: 0.5rem;
 }
 #card-container {
  display: flex;
@@ -115,9 +246,9 @@ h4 {
  display: flex;
  font-size: 0.6rem;
  flex-direction: column;
- justify-content: space-between;
+ justify-content: center;
  align-items: center;
- padding: 0.5rem;
+
  border-radius: 0.3rem;
 }
 .card img {
@@ -130,7 +261,7 @@ h4 {
 }
 .card img:hover {
  cursor: pointer;
- scale: 105%;
+ scale: 110%;
 }
 .card .heading {
  text-align: center;
@@ -142,17 +273,10 @@ h4 {
  display: flex;
  align-items: center;
  justify-content: center;
- padding: 0.3rem;
- width: 1rem;
- height: 1rem;
- background-color: white;
- border-radius: 100%;
+ /* background-color: rgb(201, 208, 255); */
+ border-radius: 0.3rem 0 0.3rem 0;
 }
-.artist {
- font-size: 15px;
- display: inline;
- font: bold;
-}
+
 .card-controls {
  position: absolute;
  bottom: 1px;
@@ -162,21 +286,11 @@ h4 {
  display: flex;
  justify-content: center;
 }
-
 .card-content {
  position: relative;
  display: flex;
  justify-content: center;
  align-items: center;
-}
-.relative {
- position: relative;
-}
-.bold {
- font: bold;
-}
-.italic {
- font: italic;
 }
 
 .footer {
