--- a/style.css
+++ b/style.css
@@ -45,6 +45,9 @@ body {
  padding: 0;
  background: rgb(229, 229, 229);
  color: rgb(69, 69, 69);
+ background-image: radial-gradient(rgba(0, 0, 0, 0.2) 1px, transparent 0);
+ background-size: 50px 50px;
+ background-position: -19px -19px;
 }
 h1,
 h2,
@@ -53,6 +56,20 @@ h4 {
  padding: 0;
  margin: 0;
 }
+.main-header {
+ display: flex;
+ align-items: center;
+ justify-content: center;
+}
+.top-title {
+ /* background: rgb(255, 255, 255); */
+ padding: 0.5rem 1rem;
+ margin-top: 1rem;
+ width: fit-content;
+ border-radius: 0.3rem;
+ font-size: 1.5rem;
+}
+
 #home-page {
  display: flex;
  flex-direction: column;
@@ -62,7 +79,6 @@ h4 {
  display: flex;
  width: 60%;
  height: 3rem;
-
  margin: 1.5rem 0 1.5rem 0;
 }
 #filter-controls > * {
@@ -106,7 +122,7 @@ button > * {
 #filter-controls > * {
  margin-right: 0.3rem;
 }
-#dialog {
+dialog {
  overflow: auto;
  overflow-x: hidden;
  width: 50%;
@@ -296,9 +312,23 @@ button > * {
  align-items: center;
 }
 
-.footer {
- display: flex;
- justify-content: center;
- background-color: rgba(0, 0, 0, 0.3);
- padding: 10px;
+@media only screen and (max-width: 767px) {
+ body {
+  font-size: 12px;
+ }
+ #filter-controls {
+  flex-direction: column;
+  width: 100%;
+  align-items: start;
+ }
+ #dialog {
+  width: 100%;
+  height: 75%;
+  align-items: center;
+  justify-self: center;
+ }
+ #dialog .album-info {
+  flex-direction: column;
+  margin: auto;
+ }
 }
