--- a/style.css
+++ b/style.css
@@ -92,6 +92,8 @@ h4 {
  background-color: white;
  width: 20rem;
  border-radius: 0.3rem 0 0 0.3rem;
+ border: var(--neutral) 0.5px solid;
+ margin: 1px;
 }
 
 #filter-controls select,
@@ -105,8 +107,7 @@ button {
  background-color: white;
  border-radius: 0.3rem;
 }
-#filter-controls select,
-button > * {
+#filter-controls button > svg {
  margin-left: 0.3rem;
 }
 #filter-controls .join {
@@ -126,7 +127,7 @@ dialog {
  overflow: auto;
  overflow-x: hidden;
  width: 50%;
- height: 50%;
+ height: 75%;
  border-radius: 0.3rem;
  border: none;
  box-shadow: 0px 10px 15px -3px rgba(0, 0, 0, 0.1),
@@ -134,7 +135,10 @@ dialog {
 }
 #modal-content .album-info {
  display: flex;
- width: 40rem;
+ flex-direction: column;
+ align-items: center;
+ justify-content: center;
+ width: 100%;
 }
 #dialog .rank {
  font-size: 25px;
@@ -144,8 +148,8 @@ dialog {
  font-size: 16px;
 }
 #dialog img {
- width: 12rem;
- height: 12rem;
+ width: 14rem;
+ height: 14rem;
  border-radius: 0.3rem;
  box-shadow: 0px 10px 15px -3px rgba(0, 0, 0, 0.1),
   0px 10px 15px -3px rgba(0, 0, 0, 0.1), 0px 10px 15px -3px rgba(0, 0, 0, 0.1);
@@ -168,19 +172,18 @@ dialog {
 }
 .album-info .modal-content-1 .modal-content-2 {
  display: flex;
+ width: 100%;
 }
 .album-info .modal-content-1 {
- display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
- width: 50%;
- padding: 1rem;
+ text-align: center;
+ margin-bottom: 0.5rem;
 }
+
 .album-info .modal-content-2 {
  font-size: 15px;
- width: 50%;
- display: flex;
  flex-direction: column;
 }
 .modal-content-2 .critic-rating {
@@ -199,7 +202,7 @@ dialog {
 }
 .critic-rating .label {
  /* font-size: 0.8rem; */
- font-size: 2rem;
+ font-size: 1.5rem;
 }
 .critic-rating .score {
  border: 5px solid black;
@@ -207,23 +210,22 @@ dialog {
  align-items: center;
  justify-content: center;
  border-radius: 100%;
- font-size: 2rem;
- width: 2rem;
- height: 2rem;
- padding: 2rem;
+ font-size: 1.5rem;
+ width: 1.5rem;
+ height: 1.5rem;
+ padding: 1.5rem;
 }
 .genre-title {
- margin-right: 0.5rem;
  align-self: center;
  font-size: 20px;
+ margin-right: 5px;
 }
 .genre-list {
  height: 100%;
  display: flex;
- flex-direction: column;
+ /* flex-direction: column; */
  margin: 0;
  list-style-type: none;
- padding-left: 1rem;
 }
 .genre-list li {
  font: bold;
@@ -233,12 +235,12 @@ dialog {
 .date {
  display: flex;
  align-items: center;
- font-size: 20px;
+ font-size: 15px;
  width: 100%;
 }
 .date > span {
- font-size: 15px;
- margin-left: 0.5rem;
+ font-size: 20px;
+ margin-right: 5px;
 }
 .artist {
  display: flex;
@@ -247,7 +249,7 @@ dialog {
 }
 .artist > span {
  font-size: 20px;
- margin-right: 0.5rem;
+ margin-right: 5px;
 }
 #card-container {
  display: flex;
@@ -310,16 +312,26 @@ dialog {
  align-items: center;
 }
 
-@media only screen and (max-width: 767px) {
- body {
-  font-size: 12px;
- }
+@media only screen and (max-width: 800px) {
  #filter-controls {
-  flex-direction: column;
+  flex-wrap: wrap;
   width: 100%;
-  align-items: start;
+  align-items: center;
+  justify-content: center;
+  margin: 0;
+  height: 100%;
  }
- #dialog {
+ #filter-controls > * {
+  margin: 0.5rem;
+ }
+ #filter-controls .join input {
+  font-size: 11px;
+  width: 70%;
+ }
+ #filter-controls .join button {
+  width: 15%;
+ }
+ dialog {
   width: 100%;
   height: 75%;
   align-items: center;
@@ -328,6 +340,14 @@ dialog {
  #dialog .album-info {
   flex-direction: column;
   margin: auto;
+ }
+ .card {
+  height: 20rem;
+  width: 11rem;
+ }
+ .card img {
+  width: 10rem;
+  height: 10rem;
  }
 }
 
