--- a/style.css
+++ b/style.css
@@ -380,6 +380,7 @@ button:hover {
  display: flex;
  flex-wrap: wrap;
  padding: 0.5rem;
+ width: 100%;
 }
 #savedAlbumsQueue > * {
  margin: 0.3rem;
