--- a/style.css
+++ b/style.css
@@ -382,19 +382,29 @@ button:hover {
  padding: 0.5rem;
  width: 100%;
 }
+#savedAlbumsQueue:last li {
+ background-color: red;
+ display: none;
+}
 #savedAlbumsQueue > * {
  margin: 0.3rem;
 }
 
-.savedAlbumListItem img {
+#savedAlbumsQueue > .savedAlbumListItem img {
  box-shadow: 0px 10px 15px -3px rgba(0, 0, 0, 0.1),
   0px 10px 15px -3px rgba(0, 0, 0, 0.1), 0px 10px 15px -3px rgba(0, 0, 0, 0.1);
  border-radius: 0.3rem;
  width: 11rem;
  height: 11rem;
 }
-
-.savedAlbumListItem h3 {
+#savedAlbumsQueue > .savedAlbumListItem {
+ flex-direction: column;
+ align-items: center;
+ width: fit-content;
+ height: fit-content;
+ position: relative;
+}
+#savedAlbumsQueue > .savedAlbumListItem h3 {
  font-size: 15px;
  display: flex;
  position: absolute;
@@ -408,7 +418,7 @@ button:hover {
  text-align: center;
  opacity: 0;
 }
-.savedAlbumListItem h3:hover {
+#savedAlbumsQueue > .savedAlbumListItem h3:hover {
  opacity: 1;
  background-color: rgba(255, 255, 255, 0.8);
 }
