--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 @import url("/styles/utility.css");
-@import url("https://fonts.googleapis.com/css2?family=Montserrat&family=Nunito&family=Poppins:wght@500&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 input,
 button,
 select {
@@ -11,6 +11,7 @@ select {
  background: none;
  margin: 0;
  cursor: pointer;
+ font-weight: 500;
  /* Add any additional styles as needed */
 }
 
@@ -26,7 +27,7 @@ ol,
 li {
  margin: 0;
  padding: 0;
- font-weight: normal;
+ font-weight: 500;
 }
 
 html,
@@ -58,8 +59,19 @@ h4 {
 }
 .main-header {
  display: flex;
+ flex-direction: column;
  align-items: center;
  justify-content: center;
+}
+.main-header details {
+ width: 50%;
+}
+.main-header details > p {
+ font-size: 15px;
+}
+.main-header summary {
+ font-weight: 100;
+ text-align: center;
 }
 .top-title {
  /* background: rgb(255, 255, 255); */
@@ -246,7 +258,10 @@ dialog {
 .artist {
  display: flex;
  align-items: center;
- font-size: 15px;
+ font-size: 1rem;
+}
+.title {
+ font-size: 1rem;
 }
 .artist > span {
  font-size: 20px;
@@ -296,7 +311,6 @@ dialog {
  /* background-color: rgb(201, 208, 255); */
  border-radius: 0.3rem 0 0.3rem 0;
 }
-
 .card-controls {
  position: absolute;
  bottom: 1px;
@@ -362,7 +376,11 @@ dialog {
  height: 2.5rem;
  padding: 0.3rem;
  margin: 0;
+ border: 1px solid var(--netural);
+ box-shadow: 0px 10px 15px -3px rgba(0, 0, 0, 0.1),
+  0px 10px 15px -3px rgba(0, 0, 0, 0.1), 0px 10px 15px -3px rgba(0, 0, 0, 0.1);
 }
+
 .btn-save-highlight {
  background-color: var(--accent);
  color: var(--base-100);
