--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url("/styles/utility.css");
+/* @import url("/styles/utility.css"); */
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
 html,
@@ -53,7 +53,24 @@ i {
  padding: 0;
  font-weight: 500;
 }
-
+.flex {
+ display: flex;
+}
+.flex-col {
+ flex-direction: column;
+}
+.flex-row {
+ flex-direction: row;
+}
+.items-center {
+ align-items: center;
+}
+.justify-center {
+ justify-content: center;
+}
+.relative {
+ position: relative;
+}
 .main-header {
  display: flex;
  flex-direction: column;
