--- a/style.css
+++ b/style.css
@@ -75,6 +75,7 @@ i {
  flex-direction: column;
  align-items: center;
  justify-content: center;
+ text-align: center;
 }
 .main-header details {
  width: 50%;
@@ -118,8 +119,7 @@ i {
  padding: 0.5rem;
  width: 20rem;
  border-radius: 0.3rem 0 0 0.3rem;
- border: var(--neutral) 0.5px solid;
- margin: 1px;
+ /* border: var(--neutral) 0.5px solid; */
  background-color: white;
 }
 
@@ -140,6 +140,7 @@ button {
 #filter-controls .join {
  display: flex;
  width: fit-content;
+ border-radius: inherit;
 }
 
 #filter-controls .join button {
